kubernetes/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: apigateway
  namespace: lifelinks
  labels:
    app: apigateway
    tags.datadoghq.com/env: prod
    tags.datadoghq.com/version: "1"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: apigateway
  template:
    metadata:
      labels:
        app: apigateway
    spec:
      containers:
        - name: apigateway
          image: docker.io/redeamerz/lifelinks-apigateway
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
          ports:
            - containerPort: 80
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
