kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apigateway
  namespace: lifelinks
spec:
  type: ClusterIP
  selector:
    app: apigateway
  ports:
    - port: 80
      targetPort: 80
