kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lifelinks-ingress
  namespace: lifelinks
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: 'api.lifelinks.nl'
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: apigateway
                port:
                  number: 80
